# rezvrh

./: .gitignore  Cargo.toml  LICENSE  README.md
rezvrh_api/: Cargo.toml
rezvrh_api/src/: main.rs
rezvrh_cli/: Cargo.toml
rezvrh_cli/src/: main.rs
rezvrh_scraper/: Cargo.toml  README.md
rezvrh_scraper/src/: lib.rs  modules.rs
rezvrh_scraper/src/modules/: auth.rs  bakalari.rs  timetable.rs
rezvrh_scraper/src/modules/auth/: credentials.rs
rezvrh_scraper/src/modules/bakalari/: info.rs  other.rs  timetable.rs  util.rs
rezvrh_scraper/src/modules/timetable/: day.rs  hour.rs  lesson.rs  util.rs
rezvrh_scraper/src/modules/timetable/lesson/: parser.rs
src/: lib.rs  main.rs  modules.rs
src/modules/: api.rs  auth.rs  bakalari.rs  timetable.rs
src/modules/bakalari/: info.rs  other.rs  timetable.rs  util.rs
src/modules/timetable/: api.rs  day.rs  hour.rs  lesson.rs  parser.rs
