[package]
name = "rezvrh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
chrono = "0.4.33"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
grid = "0.13.0"
inquire = "0.6.2"
once_cell = "1.19.0"
reqwest = "0.11"
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
