[package]
name = "rezvrh"
version = "0.1.0"
edition = "2021"
description = "Bakalari scraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
inquire = "0.6.2"
once_cell = "1.19.0"
reqwest = "0.11"
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
