[package]
name = "rezvrh_api"
version = "0.1.0"
edition = "2021"
license = "MIT-0"
repository = "https://github.com/MaximMaximS/rezvrh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
rezvrh_scraper = { path = "../rezvrh_scraper" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
