[package]
name = "rezvrh_cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for rezvrh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
inquire = "0.6.2"
serde_json = "1.0"
rezvrh_scraper = { path = "../rezvrh_scraper" }
