[package]
name = "rezvrh_cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for rezvrh"
license = "MIT-0"
repository = "https://github.com/MaximMaximS/rezvrh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12"
inquire = "0.7"
serde_json = "1.0"
rezvrh_scraper = { path = "../rezvrh_scraper" }
md-5 = "0.10.6"
