[package]
name = "rezvrh_scraper"
version = "0.1.2"
edition = "2021"
description = "Bakalari scraper"
license = "MIT-0"
repository = "https://github.com/MaximMaximS/rezvrh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0.0-beta", features = ["full"] }
once_cell = "1"
reqwest = "0.12"
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
